Bottom of whiteboard removed

--- a/components/board/index.css
+++ b/components/board/index.css
@@ -66,3 +66,7 @@ html,
 .examples__list__item a:hover {
 	text-decoration: underline;
 }
+
+.tlui-layout__bottom .tlui-debug-panel{
+	display: none;
+}
