--- a/components/editor/styles.css
+++ b/components/editor/styles.css
@@ -5,6 +5,7 @@
     margin: 1rem;
     box-shadow: 0 0 5px 0 rgba(0,0 , 0, .5);
     background-color: white;
+    color: black;
 }
 
 .container .ql-container.ql-snow {
