like button by prudhvi and whiteboard css

--- a/components/board/index.css
+++ b/components/board/index.css
@@ -67,6 +67,6 @@ html,
 	text-decoration: underline;
 }
 
-.tlui-layout__bottom .tlui-debug-panel{
+/* .tlui-layout__bottom .tlui-debug-panel{
 	display: none;
-}
+} */
