--- a/components/pagelanding/comp.css
+++ b/components/pagelanding/comp.css
@@ -24,7 +24,7 @@
   
 }
 body {
-  background-image: url(''); /* Link to your image */
+  background-image: url('/whitebg.jpg.webp'); /* Link to your image */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -52,7 +52,7 @@ body {
 
   top: 50%; /* Adjust to move up or down as needed */
   transform: translateY(-50%); /* Centers the box vertically */
-  width: 20rem;
+  width: 23rem;
   left: 3%; /* Move to the right by 20px; adjust as needed */
   top: 27%; /* Adjust to the width you want */
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.8);
@@ -61,6 +61,7 @@ body {
 }
 
 .welcome-container h2 {
+  font-size: 1.5rem;
   margin: 0; 
   font-family: 'Copperplate', 'Papyrus', fantasy;
   animation: slideInFromLeft 2.5s ease-out forwards;
@@ -95,6 +96,10 @@ body {
   margin-left: 3%;/* Adjust this value to move the element down as much as you need */
   /* The rest of your styles */
   color: black;
+  
+}
+.content-body h1{
+  font: bold;
 }
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
